--- a/fuzz.conf
+++ b/fuzz.conf
@@ -9,7 +9,7 @@ black_hosts =.gov,localhost,127.0.0.1,google,gstatic,cnzz.com,doubleclick,police
 url_ext_black =.ico,.flv,.css,.jpg,.png,.jpeg,.gif,.pdf,.ss3,.txt,.rar,.zip,.avi,.mp4,.swf,.wmi,.exe,.mpeg
 
 # 白名单HOST-为了限制Fuzz的范围, 默认为空-表示对除黑名单范围外的所有地址进行Fuzz.
-white_site =172.16.22.92
+white_site =
 
 # 请求超时-限制每次Fuzz请求超时时间
 timeout =10
