--- a/fuzz.conf
+++ b/fuzz.conf
@@ -11,6 +11,9 @@ url_ext_black =.ico,.flv,.css,.jpg,.png,.jpeg,.gif,.pdf,.ss3,.txt,.rar,.zip,.avi
 # 白名单HOST-为了限制Fuzz的范围, 默认为空-表示对除黑名单范围外的所有地址进行Fuzz.
 white_site =
 
+# 参数名黑名单-如: submit
+black_parameters =submit
+
 # 请求超时-限制每次Fuzz请求超时时间
 timeout =10
 
